tests/test-files/good/NoExpressions.elm

type alias Width = Float
type alias Height = Float