tests/test-files/bad/PhantomTypeAliases.elm
type MyData = MyData String
type alias MyDataAlias a = MyData
